--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/index.html --out-dir adopt-me-react",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "build": "parcel build src/index.html",
-    "predeploy": "rm -rf dist && parcel build src/index.html --public-url /adopt-me-react",
+    "predeploy": "rm -rf dist && NODE_ENV=development parcel build src/index.html --no-minify --out-dir adopt-me-react --public-url /adopt-me-react",
     "deploy": "gh-pages -d dist"
   },
   "author": "",
